# minisam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen3.cmake  FindSPQR.cmake  minisam-config.cmake.in
examples/: README.md
examples/cpp/: CMakeLists.txt  bundle_adjustment_bal.cpp  gps_factor_example.cpp  optimize_custom_type.cpp  pose_graph_example.cpp  pose_graph_g2o.cpp  robust_curve_fitting.cpp
examples/cpp/deprecated/: test_BA.cpp  test_BA_Bundler.cpp  test_config.cpp  test_factor_graph.cpp  test_noisemodel.cpp  test_opt.cpp  test_opt_se2.cpp  test_values.cpp
examples/data/: exp_curve_fitting_data.txt  problem-49-7776-pre.txt
examples/python/: bundle_adjustment_bal.py  gps_factor_example.py  optimize_custom_type.py  pose_graph_example.py  pose_graph_g2o.py  robust_curve_fitting.py
examples/python/deprecated/: custom_factor.py  test_emulating_types.py  test_geometry.py  test_lossfunc.py  test_marginal_cov.py  test_opt_se2.py  test_optimizer.py  test_sophus.py  test_variable_ordering.py  test_variables.py
minisam/: CMakeLists.txt  config.h.in
minisam/core/: Eigen.h  Factor.cpp  Factor.h  FactorGraph.cpp  FactorGraph.h  Key.cpp  Key.h  LossFunction.cpp  LossFunction.h  Scalar.h  SchurComplement.cpp  SchurComplement.h  Traits.h  Variable.h  VariableOrdering.cpp  VariableOrdering.h  Variables.cpp  Variables.h
minisam/geometry/: CalibBundler.cpp  CalibBundler.h  CalibK.cpp  CalibK.h  CalibKD.cpp  CalibKD.h  CalibTraits.h  Sophus.h  projection.cpp  projection.h
minisam/linear/: AMDOrdering.h  ConjugateGradient.cpp  ConjugateGradient.h  Covariance.cpp  Covariance.h  DenseCholesky.cpp  DenseCholesky.h  LinearSolver.h  Ordering.h  SchurComplementDenseSolver.cpp  SchurComplementDenseSolver.h  SparseCholesky.cpp  SparseCholesky.h  SquareRoot.h  SquareRootCholesky.cpp  SquareRootCholesky.h
minisam/linear/cholmod/: Cholmod.cpp  Cholmod.h
minisam/linear/cuda/: CUDASolver.cpp  CUDASolver.h
minisam/linear/spqr/: SPQR.cpp  SPQR.h
minisam/nonlinear/: DoglegOptimizer.cpp  DoglegOptimizer.h  GaussNewtonOptimizer.cpp  GaussNewtonOptimizer.h  LevenbergMarquardtOptimizer.cpp  LevenbergMarquardtOptimizer.h  MarginalCovariance.cpp  MarginalCovariance.h  NonlinearOptimizer.cpp  NonlinearOptimizer.h  NumericalFactor.cpp  NumericalFactor.h  SparsityPattern.cpp  SparsityPattern.h  linearization.cpp  linearization.h  numericalJacobian.h  numericalJacobianImpl.h
minisam/slam/: BALInterface.cpp  BALInterface.h  BetweenFactor.h  PriorFactor.h  ReprojectionFactor.cpp  ReprojectionFactor.h  g2oInterface.cpp  g2oInterface.h
minisam/utils/: Timer.cpp  Timer.h  testAssertions.cpp  testAssertions.h
python/: CMakeLists.txt  setup.py.in  setup_no_sophus.py.in
python/minisam/: .gitignore  __init__.py
python/minisam/sophus/: __init__.py
python/minisam_wrapper/: core.cpp  factor.cpp  geometry.cpp  loss_function.cpp  module.cpp  optimizer.cpp  print.h  pyobject_traits.h  slam.cpp  type_cast.h  utils.cpp  variables.cpp
python/sophus_wrapper/: sophus.cpp
tests/: CMakeLists.txt  catch_test_main.cpp  testCUDASolver.cpp  testCalibration.cpp  testCholmod.cpp  testConjugateGradient.cpp  testCovariance.cpp  testDenseCholesky.cpp  testDogleg.cpp  testEigen.cpp  testFactorGraph.cpp  testLevenbergMarquardt.cpp  testMarginalCovariance.cpp  testNumericalJacobian.cpp  testOrdering.cpp  testSPQR.cpp  testScalar.cpp  testSchurComplement.cpp  testSchurComplementDenseSolver.cpp  testSophus.cpp  testSparseCholesky.cpp  testSquareRootCholesky.cpp  testVariables.cpp  test_common_factors.h  test_common_linear_systems.h  testlinearization.cpp  testprojection.cpp
